--- a/aula22/exemploJson.html
+++ b/aula22/exemploJson.html
@@ -65,8 +65,8 @@
 			
 			
 			//CREATE 
-// 			s.add(contato); //s.add({nome: 'fab', email: 'email.cpm'});			
-// 			 s.insert(0,contato); // insere contato na primeira posicao da store
+			s.add(contato); //s.add({nome: 'fab', email: 'email.cpm'});			
+			 s.insert(0,contato); // insere contato na primeira posicao da store
 			
 			//UPDATE
 // 			var contatoAtualizado = s.getAt(3); // getById(5);
@@ -77,7 +77,7 @@
 // 			s.removeAt(index);
 // 			s.removeAll(silent); //remove tudo // silent == true ou false
 
-			s.remove(s.getAt(4));
+// 			s.remove(s.getAt(4));
 
 
 // 			s.sync();
